--- a/view/frontend/layout/htmlsitemap_catalog_category_categories.xml
+++ b/view/frontend/layout/htmlsitemap_catalog_category_categories.xml
@@ -8,6 +8,7 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
 	<body>
 		<referenceContainer name="content">
+            <block name="html-sitemap-general" template="Magefan_HtmlSitemap::general.phtml"/>
 			<block as="catalog_category" class="Magefan\HtmlSitemap\Block\Catalog\Category" name="catalog.category" template="Magefan_HtmlSitemap::catalog/category.phtml"/>
 		</referenceContainer>
 	</body>
