--- a/view/frontend/templates/additional/additional.phtml
+++ b/view/frontend/templates/additional/additional.phtml
@@ -11,7 +11,7 @@
 <?php
 $links = $block->getAllLinksArray();
 ?>
-<div>
+<div class="sitemap-item-type">
     <?php /*$block->escapeHtml(__('Hello Magefan_HtmlSitemap::additional/additional.phtml'))*/ ?>
     <?php if (count($links)): ?>
         <h2><?= $block->escapeHtml(__($block->getBlockTitle())) ?></h2>
