--- a/view/frontend/templates/blog/post.phtml
+++ b/view/frontend/templates/blog/post.phtml
@@ -8,7 +8,7 @@
  * @var $block \Magefan\HtmlSitemap\Block\Blog\Post
  */
 ?>
-<div>
+<div class="sitemap-item-type">
     <h2><?= $block->escapeHtml(__('All Posts')) ?></h2>
     <br />
     <?php $lettersArray = range('A', 'Z');
