--- a/view/frontend/templates/catalog/product.phtml
+++ b/view/frontend/templates/catalog/product.phtml
@@ -8,7 +8,7 @@
  * @var $block \Magefan\HtmlSitemap\Block\Catalog\Product
  */
 ?>
-<div>
+<div class="sitemap-item-type">
     <h2><?=$block->escapeHtml(__('All Products')) ?></h2>
     <br />
     <?php $lettersArray = range('A', 'Z');
