--- a/view/frontend/templates/cms/page.phtml
+++ b/view/frontend/templates/cms/page.phtml
@@ -8,7 +8,7 @@
  * @var \Magefan\HtmlSitemap\Block\Cms\Page $block
  */
 ?>
-<div>
+<div class="sitemap-item-type">
     <h2><?= $block->escapeHtml(__($block->getBlockTitle())) ?></h2>
     <br />
     <?php foreach ($block->getCmsPagesList() as $page): ?>
