--- a/view/frontend/layout/htmlsitemap_additional_links.xml
+++ b/view/frontend/layout/htmlsitemap_additional_links.xml
@@ -8,6 +8,7 @@
 <page layout="1column" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
 	<body>
 		<referenceContainer name="content">
+            <block name="html-sitemap-general" template="Magefan_HtmlSitemap::general.phtml"/>
 			<!--<block class="Magefan\HtmlSitemap\Block\Additional\List" name="additional.list" template="Magefan_HtmlSitemap::additional/list.phtml"/>-->
 			<block as="additional_additional" class="Magefan\HtmlSitemap\Block\Additional\Additional" name="additional.additional" template="Magefan_HtmlSitemap::additional/additional.phtml"/>
 		</referenceContainer>
