--- a/view/frontend/layout/htmlsitemap_catalog_product_products.xml
+++ b/view/frontend/layout/htmlsitemap_catalog_product_products.xml
@@ -8,6 +8,7 @@
 <page layout="1column" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
 	<body>
 		<referenceContainer name="content">
+            <block name="html-sitemap-general" template="Magefan_HtmlSitemap::general.phtml"/>
 			<block as="catalog_product" class="Magefan\HtmlSitemap\Block\Catalog\Product" name="catalog.product" template="Magefan_HtmlSitemap::catalog/product.phtml"/>
 		</referenceContainer>
 	</body>
