--- a/view/frontend/layout/htmlsitemap_index_index.xml
+++ b/view/frontend/layout/htmlsitemap_index_index.xml
@@ -8,6 +8,7 @@
 <page layout="1column" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
 	<body>
 		<referenceContainer name="content">
+            <block name="html-sitemap-general" template="Magefan_HtmlSitemap::general.phtml"/>
             <block class="Magefan\HtmlSitemap\Block\Sitemap" name="blog.sitemap">
                 <block class="Magefan\HtmlSitemap\Block\Cms\Page" name="index.cms.pages" template="Magefan_HtmlSitemap::index/cms_pages.phtml" ifconfig="mfhs/cmspagelinks/displaycmspagelinks"/>
                 <block class="Magefan\HtmlSitemap\Block\Catalog\Category" name="index.catalog.category" template="Magefan_HtmlSitemap::index/catalog_category.phtml" ifconfig="mfhs/categorylinks/displaycategorylinks"/>
