--- a/view/frontend/templates/catalog/category.phtml
+++ b/view/frontend/templates/catalog/category.phtml
@@ -8,7 +8,7 @@
  * @var $block \Magefan\HtmlSitemap\Block\Catalog\Category
  */
 ?>
-<div>
+<div class="sitemap-item-type">
     <h2><?= $block->escapeHtml(__($block->getBlockTitle())) ?></h2>
     <br />
     <?php $items = $block->getAllGroupedChildes(); ?>
