--- a/view/frontend/templates/index/blog_post.phtml
+++ b/view/frontend/templates/index/blog_post.phtml
@@ -15,7 +15,7 @@ $i = 0;
 $j = 0;
 ?>
 <?php if (count($posts)) { ?>
-<div class="sitemap-item-type">
+<div class="sitemap-item-type sitemap-item-section">
     <h2><?= $block->escapeHtml(__($block->getBlockTitle())) ?></h2>
     <br>
     <?php foreach ($posts as $post): ?>
