--- a/view/frontend/templates/index/cms_pages.phtml
+++ b/view/frontend/templates/index/cms_pages.phtml
@@ -16,7 +16,7 @@ $i = 0;
 $j = 0;
 ?>
 <?php if (count($pages)) { ?>
-    <div class="sitemap-item-type">
+    <div class="sitemap-item-type sitemap-item-section">
         <h2><?= $block->escapeHtml(__($block->getBlockTitle())) ?></h2>
         <br>
         <?php foreach ($pages as $page): ?>
