--- a/view/frontend/templates/blog/category.phtml
+++ b/view/frontend/templates/blog/category.phtml
@@ -16,7 +16,7 @@
     <?php if (count($items)) { ?>
 
         <div class="widget block block-categories" data-bind="scope: 'categories'">
-            <ul class="accordion"  id="accordion-2">
+            <div class="accordion"  id="accordion-2">
                 <?php
                 $level = 0;
                 $first = true;
@@ -42,8 +42,11 @@
                     $level = $newLevel;
                     $first = false;
                 }
+
+                $closedTags = ($level > 0) ? $level - 1 : 1;
+                echo str_repeat('</li></ul>', $closedTags);
                 ?>
-            </ul>
+            </div>
         </div>
         <style>
             .htmlsitemap-blog_category-categories .widget.block-categories ul li {
