--- a/view/frontend/templates/catalog/category.phtml
+++ b/view/frontend/templates/catalog/category.phtml
@@ -15,7 +15,7 @@
 
     <?php if (count($items)) { ?>
         <div class="widget block block-categories" data-bind="scope: 'categories'">
-            <ul class="accordion"  id="accordion-2">
+            <div class="accordion"  id="accordion-2">
                 <?php
                 $level = 0;
                 $first = true;
@@ -39,8 +39,12 @@
                     <?php
                     $level = $newLevel;
                     $first = false;
-                } ?>
-            </ul>
+                }
+
+                $closedTags = ($level > 0) ? $level - 1 : 1;
+                echo str_repeat('</li></ul>', $closedTags);
+                ?>
+            </div>
         </div>
         <style>
             .htmlsitemap-catalog_category-categories .widget.block-categories ul li {
