--- a/view/frontend/templates/catalog/product.phtml
+++ b/view/frontend/templates/catalog/product.phtml
@@ -35,10 +35,13 @@
                 <strong><?= $block->escapeHtml($letter); ?></strong>
             </p>
 
-            <?php $ulLimit = ceil(count($productsArray)/4);
-            $liCount = 0; ?>
+            <?php
+                $ulLimit = ceil(count($productsArray)/4);
+                $liCount = 0;
+                $i = 0;
+            ?>
             <table>
-                <th>
+                <tr>
                 <?php foreach ($productsArray as $product) {
                     if ($liCount == 0) { ?>
                         <th>
@@ -48,14 +51,16 @@
                                     <a href="<?= $block->escapeUrl($product['url']) ?>"><?= $block->escapeHtml($product['name']) ?></a>
                                 </li>
                     <?php
-                    $liCount ++;
-                    if ($liCount == $ulLimit) { ?>
+                    $liCount++;
+                    $i++;
+                    if ($liCount == $ulLimit || $i == count($productsArray)) { ?>
                             </ul>
                         </th>
                         <?php $liCount = 0; ?>
                     <?php } ?>
-                <?php } ?>
-                </th>
+                <?php }
+                ?>
+                </tr>
             </table>
         </div>
     <?php } ?>
