--- a/view/frontend/templates/blog/category.phtml
+++ b/view/frontend/templates/blog/category.phtml
@@ -34,7 +34,7 @@
                     }
                     ?>
                     <li>
-                    <a href="<?= $block->escapeUrl($item->getCategoryUrl()) ?>">
+                    <a href="<?= $block->escapeUrl($item->getCategoryUrl()) ?>" title="<?= $block->escapeHtml($item->getTitle()) ?>">
                         <?= $block->escapeHtml($item->getTitle()) ?>
                     </a>
                     <?php
