--- a/view/frontend/templates/catalog/category.phtml
+++ b/view/frontend/templates/catalog/category.phtml
@@ -32,7 +32,7 @@
                         }
                     } ?>
                     <li>
-                    <a href="<?= $block->escapeUrl($item->getUrl()) ?>">
+                    <a href="<?= $block->escapeUrl($item->getUrl()) ?>" title="<?= $block->escapeHtml($item->getName()) ?>">
                         <?= $block->escapeHtml($item->getName()) ?>
                     </a>
                     <?php
