--- a/view/frontend/templates/index/cms_pages.phtml
+++ b/view/frontend/templates/index/cms_pages.phtml
@@ -21,7 +21,7 @@ $j = 0;
         <br>
         <?php foreach ($pages as $page): ?>
             <?= ($i === 0) ? '<div class="sitemap-col">' : '' ?>
-                <a href="<?= $block->escapeUrl($block->getBaseUrl() . $page->getIdentifier()) ?>">
+                <a href="<?= $block->escapeUrl($block->getBaseUrl() . $page->getIdentifier()) ?>" title="<?= $block->escapeHtml($page['title']) ?>">
                     <?= $block->escapeHtml($page['title']) ?>
                 </a>
             <?= ($i === $limit-1 || count($pages)-1 == $j) ? '</div>' : '' ?>
