--- a/view/frontend/templates/index/catalog_category.phtml
+++ b/view/frontend/templates/index/catalog_category.phtml
@@ -13,8 +13,7 @@ $items = $block->getGroupedChildes();
 ?>
 <?php if (count($items)) { ?>
     <div class="sitemap-item-type sitemap-item-section">
-        <h2><?= $block->escapeHtml(__($block->getBlockTitle())) ?></h2>
-        <br />
+        <h2 class="sitemap-title"><?= $block->escapeHtml(__($block->getBlockTitle())) ?></h2>
         <div class="widget block block-categories" data-bind="scope: 'categories'">
             <div class="accordion"  id="accordion-2">
                 <?php
@@ -47,7 +46,7 @@ $items = $block->getGroupedChildes();
                 ?>
             </div>
             <?php if ($block->showViewMore()): ?>
-                <a href="<?= $block->escapeUrl($block->getUrl('*/catalog_category/categories'))?>" style="color: red; padding: 5px;">
+                <a class="view-more" href="<?= $block->escapeUrl($block->getUrl('*/catalog_category/categories'))?>" style="color: red; padding: 5px;">
                     <?= $block->escapeHtml(__('View more'))?>
                 </a>
             <?php endif; ?>
