--- a/view/frontend/templates/blog/post.phtml
+++ b/view/frontend/templates/blog/post.phtml
@@ -9,7 +9,7 @@
  */
 ?>
 <div class="sitemap-item-type sitemap-item-section">
-    <br>
+
     <?php
     $lettersArray = range('A', 'Z');
     $lettersArray[] = '#';
@@ -34,34 +34,14 @@
             <strong><?= $block->escapeHtml($letter); ?></strong>
         </p>
 
-        <?php
-            $ulLimit = ceil(count($postsArray)/4);
-            $liCount = 0;
-            $i = 0;
-        ?>
-        <table>
-            <tr>
-                <?php foreach ($postsArray as $post) {
-                    if ($liCount == 0) { ?>
-                        <th>
-                        <ul style="list-style-type:none">
-                    <?php } ?>
-                        <li>
-                            <a href="<?= $block->escapeUrl($post['url']) ?>" title="<?= $block->escapeHtml($post['name']) ?>">
-                                <?= $block->escapeHtml($post['name']) ?>
-                            </a>
-                        </li>
-                    <?php
-                    $liCount++;
-                    $i++;
-                    if ($liCount == $ulLimit || $i == count($postsArray)) { ?>
-                        </ul>
-                        </th>
-                        <?php $liCount = 0; ?>
-                    <?php } ?>
-                <?php } ?>
-            </tr>
-        </table>
+        <div class="sitemap-item-wrap">
+            <?php foreach ($postsArray as $post): ?>
+                <a class="sitemap-item" href="<?= $block->escapeUrl($post['url']) ?>" title="<?= $block->escapeHtml($post['name']) ?>">
+                    <?= $block->escapeHtml($post['name']) ?>
+                </a>
+            <?php endforeach; ?>
+        </div>
+
     </div>
     <?php endforeach; ?>
 </div>
