--- a/view/frontend/templates/catalog/product.phtml
+++ b/view/frontend/templates/catalog/product.phtml
@@ -8,8 +8,9 @@
  * @var $block \Magefan\HtmlSitemap\Block\Catalog\Product
  */
 ?>
+
 <div class="sitemap-item-type sitemap-item-section">
-    <br>
+
     <?php
     $lettersArray = range('A', 'Z');
     $lettersArray[] = '#';
@@ -34,33 +35,11 @@
                 <strong><?= $block->escapeHtml($letter); ?></strong>
             </p>
 
-            <?php
-                $ulLimit = ceil(count($productsArray)/4);
-                $liCount = 0;
-                $i = 0;
-            ?>
-            <table>
-                <tr>
-                <?php foreach ($productsArray as $product) {
-                    if ($liCount == 0) { ?>
-                        <th>
-                            <ul style="list-style-type:none">
-                    <?php } ?>
-                                <li>
-                                    <a href="<?= $block->escapeUrl($product['url']) ?>" title="<?= $block->escapeHtml($product['name']) ?>"><?= $block->escapeHtml($product['name']) ?></a>
-                                </li>
-                    <?php
-                    $liCount++;
-                    $i++;
-                    if ($liCount == $ulLimit || $i == count($productsArray)) { ?>
-                            </ul>
-                        </th>
-                        <?php $liCount = 0; ?>
-                    <?php } ?>
-                <?php }
-                ?>
-                </tr>
-            </table>
+            <div class="sitemap-item-wrap">
+                <?php foreach ($productsArray as $product): ?>
+                    <a href="<?= $block->escapeUrl($product['url']) ?>" title="<?= $block->escapeHtml($product['name']) ?>"><?= $block->escapeHtml($product['name']) ?></a>
+                <?php endforeach; ?>
+            </div>
         </div>
     <?php } ?>
 </div>
