--- a/view/frontend/templates/cms/page.phtml
+++ b/view/frontend/templates/cms/page.phtml
@@ -9,12 +9,13 @@
  */
 ?>
 <div class="sitemap-item-type sitemap-item-section">
-    <br>
-    <?php foreach ($block->getCmsPagesList() as $page): ?>
-        <a href="<?= $block->escapeUrl($block->getBaseUrl() . $page->getIdentifier()) ?>" title="<?= $block->escapeHtml($page['title']) ?>">
-            <?= $block->escapeHtml($page['title']) ?>
-        </a>
-    <?php endforeach; ?>
+    <div class="sitemap-item-wrap">
+        <?php foreach ($block->getCmsPagesList() as $page): ?>
+            <a class="sitemap-item" href="<?= $block->escapeUrl($block->getBaseUrl() . $page->getIdentifier()) ?>" title="<?= $block->escapeHtml($page['title']) ?>">
+                <?= $block->escapeHtml($page['title']) ?>
+            </a>
+        <?php endforeach; ?>
+    </div>
     <?php if ($pages = $block->getPagerHtml()): ?>
         <div class="order-products-toolbar toolbar bottom"><?= $pages ?></div>
     <?php endif ?>
