--- a/view/frontend/templates/index/additional_additional.phtml
+++ b/view/frontend/templates/index/additional_additional.phtml
@@ -10,33 +10,22 @@
  */
 
 $links = $block->getLinksArray();
-$limit = 4;
-$i = 0;
-$j = 0;
 ?>
+
 <?php if (count($links)): ?>
     <div class="sitemap-item-type sitemap-item-section">
-        <h2><?= $block->escapeHtml(__($block->getBlockTitle())) ?></h2>
-        <br>
-        <?php foreach ($links as $link): ?>
+        <h2 class="sitemap-title"><?= $block->escapeHtml(__($block->getBlockTitle())) ?></h2>
+        <div class="sitemap-item-wrap">
+            <?php foreach ($links as $link): ?>
             <?php if ($link): ?>
-                <?= ($i === 0) ? '<div class="sitemap-col">' : '' ?>
-                    <a href="<?= $block->escapeUrl($block->getBaseUrl() . $link['url'])?>" title="<?= $block->escapeHtml($link['title'])?>">
-                        <?= $block->escapeHtml($link['title'])?>
-                    </a>
-                <?= ($i === $limit-1 || count($links)-1 == $j) ? '</div>' : '' ?>
-                <?php
-                    $i++;
-                    $j++;
-
-                    if ($i === $limit) {
-                        $i = 0;
-                    }
-                ?>
+                <a class="sitemap-item" href="<?= $block->escapeUrl($block->getBaseUrl() . $link['url'])?>" title="<?= $block->escapeHtml($link['title'])?>">
+                    <?= $block->escapeHtml($link['title'])?>
+                </a>
             <?php endif; ?>
         <?php endforeach; ?>
+        </div>
         <?php if ($block->showViewMore()): ?>
-            <a href="<?= $block->escapeUrl($block->getUrl('*/additional/links'))?>" style="color: red; padding: 5px;">
+            <a class="view-more" href="<?= $block->escapeUrl($block->getUrl('*/additional/links'))?>">
                 <?= $block->escapeHtml(__('View more'))?>
             </a>
         <?php endif; ?>
