--- a/view/frontend/templates/index/cms_pages.phtml
+++ b/view/frontend/templates/index/cms_pages.phtml
@@ -11,31 +11,20 @@
  */
 
 $pages = $block->getCmsPages();
-$limit = 4;
-$i = 0;
-$j = 0;
 ?>
+
 <?php if (count($pages)) { ?>
     <div class="sitemap-item-type sitemap-item-section">
-        <h2><?= $block->escapeHtml(__($block->getBlockTitle())) ?></h2>
-        <br>
+        <h2 class="sitemap-title"><?= $block->escapeHtml(__($block->getBlockTitle())) ?></h2>
+        <div class="sitemap-item-wrap">
         <?php foreach ($pages as $page): ?>
-            <?= ($i === 0) ? '<div class="sitemap-col">' : '' ?>
-                <a href="<?= $block->escapeUrl($block->getBaseUrl() . $page->getIdentifier()) ?>" title="<?= $block->escapeHtml($page['title']) ?>">
-                    <?= $block->escapeHtml($page['title']) ?>
-                </a>
-            <?= ($i === $limit-1 || count($pages)-1 == $j) ? '</div>' : '' ?>
-            <?php
-                $i++;
-                $j++;
-
-                if ($i === $limit) {
-                    $i = 0;
-                }
-            ?>
+            <a class="sitemap-item" href="<?= $block->escapeUrl($block->getBaseUrl() . $page->getIdentifier()) ?>" title="<?= $block->escapeHtml($page['title']) ?>">
+                <?= $block->escapeHtml($page['title']) ?>
+            </a>
         <?php endforeach; ?>
+        </div>
         <?php if ($block->showViewMore()): ?>
-            <a href="<?= $block->escapeUrl($block->getUrl('*/cms_page/page'))?>" style="color: red; padding: 5px;">
+            <a class="view-more" href="<?= $block->escapeUrl($block->getUrl('*/cms_page/page'))?>" style="color: red; padding: 5px;">
                 <?= $block->escapeHtml(__('View more'))?>
             </a>
         <?php endif; ?>
