--- a/view/frontend/layout/htmlsitemap_catalog_category_categories.xml
+++ b/view/frontend/layout/htmlsitemap_catalog_category_categories.xml
@@ -7,6 +7,31 @@
 -->
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
 	<body>
+        <referenceBlock name="breadcrumbs">
+            <action method="addCrumb">
+                <argument name="crumbName" xsi:type="string" translate="true">Home</argument>
+                <argument name="crumbInfo" xsi:type="array">
+                    <item name="title" xsi:type="string" translate="true">Home</item>
+                    <item name="label" xsi:type="string" translate="true">Home</item>
+                    <item name="link" xsi:type="string">{{baseUrl}}</item>
+                </argument>
+            </action>
+            <action method="addCrumb">
+                <argument name="crumbName" xsi:type="string" translate="true">Sitemap</argument>
+                <argument name="crumbInfo" xsi:type="array">
+                    <item name="title" xsi:type="string" translate="true">Sitemap</item>
+                    <item name="label" xsi:type="string" translate="true">Sitemap</item>
+                    <item name="link" xsi:type="string">{{baseUrl}}/htmlsitemap</item>
+                </argument>
+            </action>
+            <action method="addCrumb">
+                <argument name="crumbName" xsi:type="string" translate="true">Categories</argument>
+                <argument name="crumbInfo" xsi:type="array">
+                    <item name="title" xsi:type="string" translate="true">Categories</item>
+                    <item name="label" xsi:type="string" translate="true">Categories</item>
+                </argument>
+            </action>
+        </referenceBlock>
 		<referenceContainer name="content">
             <block name="html-sitemap-general" template="Magefan_HtmlSitemap::general.phtml"/>
 			<block as="catalog_category" class="Magefan\HtmlSitemap\Block\Catalog\Category" name="catalog.category" template="Magefan_HtmlSitemap::catalog/category.phtml"/>
